--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "hardhat": "^2.24.0"
   },
   "dependencies": {
+    "chart": "^0.1.2",
     "dotenv": "^16.5.0",
-    "live-server": "^1.2.2"
+    "ethers": "^6.14.1",
+    "live-server": "^1.2.2",
+    "web3": "^4.16.0"
   }
 }
